# pragmatik_utils

./: README.md  setup.cfg  setup.py
pragmatik_utils/csv_ops/: csv_reader.py
pragmatik_utils/data_ops/: utils.py
pragmatik_utils/scrapers/: image_downloader.py  page.html  page_downloader.py
