[metadata]
name = pragmatik_utils
version = 1.0.0
author = Mitch Eccles
description = A collection of functions that I seem to use over and over again
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PragmatikAI/pragmatik_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
